# ising-redux

./: CMakeLists.txt  README.md  conanfile.txt  install-build-and-test.sh  test.cpp  view.ipynb
include/: ising.hpp  run_ising.hpp
src/: main.cpp  pyising.cpp
test/: test_ising.cpp
